100% Branch coverage in Creature class